{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 84,
  "lineage": "f36e617e-4756-db1d-9d3c-0e3abd6cbbe5",
  "resources": [
    {
      "module": "module.bastionhost",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07f66a320b0797fd9",
            "arn": "arn:aws:ec2:il-central-1:636768524979:instance/i-0f73dcf773a5adcb8",
            "associate_public_ip_address": true,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f73dcf773a5adcb8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Nivas-Ansible-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b85fa99a919d004e"
              }
            ],
            "primary_network_interface_id": "eni-0b85fa99a919d004e",
            "private_dns": "ip-10-0-0-31.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.31",
            "public_dns": "ec2-51-85-34-62.il-central-1.compute.amazonaws.com",
            "public_ip": "51.85.34.62",
            "region": "il-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03670a3e04bd9ac0f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-06741da4cb207247f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e2190ea523a98c8f",
            "tags": {
              "Name": "BastionHost"
            },
            "tags_all": {
              "Name": "BastionHost"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06741da4cb207247f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "i-0f73dcf773a5adcb8",
            "region": "il-central-1"
          },
          "dependencies": [
            "module.bastionhost.aws_security_group.bastion_sg",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bastionhost",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:636768524979:security-group/sg-06741da4cb207247f",
            "description": "Allow SSH from your IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06741da4cb207247f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "636768524979",
            "region": "il-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BastionSG"
            },
            "tags_all": {
              "Name": "BastionSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3b1c2f194f80167"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "sg-06741da4cb207247f",
            "region": "il-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07f66a320b0797fd9",
            "arn": "arn:aws:ec2:il-central-1:636768524979:instance/i-07b197181d5cc9ebf",
            "associate_public_ip_address": true,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b197181d5cc9ebf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Nivas-Ansible-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02ad5c342d047ccc0"
              }
            ],
            "primary_network_interface_id": "eni-02ad5c342d047ccc0",
            "private_dns": "ip-10-0-0-19.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.19",
            "public_dns": "ec2-51-16-38-38.il-central-1.compute.amazonaws.com",
            "public_ip": "51.16.38.38",
            "region": "il-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0368041e34dae1694",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0ace4b555eaa70a47"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e2190ea523a98c8f",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ace4b555eaa70a47"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "i-07b197181d5cc9ebf",
            "region": "il-central-1"
          },
          "dependencies": [
            "module.jenkins.aws_security_group.jenkins_sg",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:636768524979:security-group/sg-0ace4b555eaa70a47",
            "description": "Allow SSH and Jenkins UI",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ace4b555eaa70a47",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "636768524979",
            "region": "il-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f3b1c2f194f80167"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "sg-0ace4b555eaa70a47",
            "region": "il-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015048558a39f86a3",
            "arn": "arn:aws:ec2:il-central-1:636768524979:elastic-ip/eipalloc-015048558a39f86a3",
            "association_id": "eipassoc-0a611d6dadab908a5",
            "domain": "vpc",
            "id": "eipalloc-015048558a39f86a3",
            "network_border_group": "il-central-1",
            "network_interface": "eni-03538b506bb2e1e94",
            "private_dns": "ip-10-0-0-211.il-central-1.compute.internal",
            "private_ip": "10.0.0.211",
            "public_dns": "ec2-51-84-169-172.il-central-1.compute.amazonaws.com",
            "public_ip": "51.84.169.172",
            "public_ipv4_pool": "amazon",
            "region": "il-central-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:636768524979:internet-gateway/igw-0a13a527fefb31f47",
            "id": "igw-0a13a527fefb31f47",
            "owner_id": "636768524979",
            "region": "il-central-1",
            "tags": {
              "Name": "books-dev-igw"
            },
            "tags_all": {
              "Name": "books-dev-igw"
            },
            "vpc_id": "vpc-0f3b1c2f194f80167"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015048558a39f86a3",
            "association_id": "eipassoc-0a611d6dadab908a5",
            "connectivity_type": "public",
            "id": "nat-0bdbfbb5cb73a06b0",
            "network_interface_id": "eni-03538b506bb2e1e94",
            "private_ip": "10.0.0.211",
            "public_ip": "51.84.169.172",
            "region": "il-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e2190ea523a98c8f",
            "tags": {
              "Name": "books-dev-nat-gateway"
            },
            "tags_all": {
              "Name": "books-dev-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:636768524979:route-table/rtb-09b783b039d21ebf5",
            "id": "rtb-09b783b039d21ebf5",
            "owner_id": "636768524979",
            "propagating_vgws": [],
            "region": "il-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bdbfbb5cb73a06b0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "books-dev-private-rt"
            },
            "tags_all": {
              "Name": "books-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3b1c2f194f80167"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "rtb-09b783b039d21ebf5",
            "region": "il-central-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:636768524979:route-table/rtb-08b3511405964f57f",
            "id": "rtb-08b3511405964f57f",
            "owner_id": "636768524979",
            "propagating_vgws": [],
            "region": "il-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a13a527fefb31f47",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "books-dev-public-rt"
            },
            "tags_all": {
              "Name": "books-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3b1c2f194f80167"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "rtb-08b3511405964f57f",
            "region": "il-central-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fb20cb9800b5a4c",
            "region": "il-central-1",
            "route_table_id": "rtb-09b783b039d21ebf5",
            "subnet_id": "subnet-066b0d428f61eb67e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_a",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0785c5846d200301d",
            "region": "il-central-1",
            "route_table_id": "rtb-09b783b039d21ebf5",
            "subnet_id": "subnet-0c18a85b946e21e5b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_b",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0479ce2d8acc16793",
            "region": "il-central-1",
            "route_table_id": "rtb-08b3511405964f57f",
            "subnet_id": "subnet-0e2190ea523a98c8f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010e3effac1705646",
            "region": "il-central-1",
            "route_table_id": "rtb-08b3511405964f57f",
            "subnet_id": "subnet-0838b40b61e86ae01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:636768524979:subnet/subnet-066b0d428f61eb67e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066b0d428f61eb67e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636768524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "il-central-1",
            "tags": {
              "Name": "books-dev-private-subnet-a"
            },
            "tags_all": {
              "Name": "books-dev-private-subnet-a"
            },
            "vpc_id": "vpc-0f3b1c2f194f80167"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "subnet-066b0d428f61eb67e",
            "region": "il-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:636768524979:subnet/subnet-0c18a85b946e21e5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c18a85b946e21e5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636768524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "il-central-1",
            "tags": {
              "Name": "books-dev-private-subnet-b"
            },
            "tags_all": {
              "Name": "books-dev-private-subnet-b"
            },
            "vpc_id": "vpc-0f3b1c2f194f80167"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "subnet-0c18a85b946e21e5b",
            "region": "il-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:636768524979:subnet/subnet-0e2190ea523a98c8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2190ea523a98c8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636768524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "il-central-1",
            "tags": {
              "Name": "books-dev-public-subnet-a"
            },
            "tags_all": {
              "Name": "books-dev-public-subnet-a"
            },
            "vpc_id": "vpc-0f3b1c2f194f80167"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "subnet-0e2190ea523a98c8f",
            "region": "il-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:636768524979:subnet/subnet-0838b40b61e86ae01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0838b40b61e86ae01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636768524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "il-central-1",
            "tags": {
              "Name": "books-dev-public-subnet-b"
            },
            "tags_all": {
              "Name": "books-dev-public-subnet-b"
            },
            "vpc_id": "vpc-0f3b1c2f194f80167"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "subnet-0838b40b61e86ae01",
            "region": "il-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:636768524979:vpc/vpc-0f3b1c2f194f80167",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-010dab250962cb2a6",
            "default_route_table_id": "rtb-0443da8159f97f3d7",
            "default_security_group_id": "sg-0f6aac35895da16d3",
            "dhcp_options_id": "dopt-0788650a936f8fc26",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f3b1c2f194f80167",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0443da8159f97f3d7",
            "owner_id": "636768524979",
            "region": "il-central-1",
            "tags": {
              "Name": "books-dev-vpc"
            },
            "tags_all": {
              "Name": "books-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.sonar",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07f66a320b0797fd9",
            "arn": "arn:aws:ec2:il-central-1:636768524979:instance/i-09c1dda45e89305d8",
            "associate_public_ip_address": true,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09c1dda45e89305d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Nivas-Ansible-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f55a6c5ce51fa0e0"
              }
            ],
            "primary_network_interface_id": "eni-0f55a6c5ce51fa0e0",
            "private_dns": "ip-10-0-0-202.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.202",
            "public_dns": "ec2-51-17-184-253.il-central-1.compute.amazonaws.com",
            "public_ip": "51.17.184.253",
            "region": "il-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c584f51e90349d5d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-054d98450b4d55dc5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e2190ea523a98c8f",
            "tags": {
              "Name": "Sonar-Server"
            },
            "tags_all": {
              "Name": "Sonar-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-054d98450b4d55dc5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "i-09c1dda45e89305d8",
            "region": "il-central-1"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main",
            "module.sonar.aws_security_group.sonar_sg"
          ]
        }
      ]
    },
    {
      "module": "module.sonar",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonar_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:636768524979:security-group/sg-054d98450b4d55dc5",
            "description": "Allow SSH and sonar UI",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054d98450b4d55dc5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "sonar-sg",
            "name_prefix": "",
            "owner_id": "636768524979",
            "region": "il-central-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f3b1c2f194f80167"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "sg-054d98450b4d55dc5",
            "region": "il-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}